--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "npm-run-all -p -r start:ng start:node",
     "start:node": "nodemon index.js",
     "start:ng": "npm run ng -- build --aot --watch",
+    "analyze": "npm run ng -- build --verbose --json --aot --prod",
     "test": "npm run ng -- test",
     "lint": "npm run ng -- lint"
   },
