--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "ng": "ng",
     "start": "npm-run-all -p -r start:ng start:node",
+    "start:aot": "npm-run-all -p -r start:ng:aot start:node",
     "start:node": "nodemon index.js",
-    "start:ng": "npm run ng -- build --aot --watch",
+    "start:ng": "npm run ng -- build --aot=false --watch",
+    "start:ng:aot": "npm run ng -- build --aot --watch",
     "analyze": "npm run ng -- build --verbose --json --aot --prod",
-    "test": "npm run ng -- test",
+    "test": "npm run ng -- test --code-coverage --single-run",
     "lint": "npm run ng -- lint"
   },
   "private": true,
@@ -35,6 +37,7 @@
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "codelyzer": "~2.0.0-beta.1",
+    "ejs": "^2.5.5",
     "express": "^4.14.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
@@ -45,7 +48,6 @@
     "karma-jasmine": "^1.0.2",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.1",
-    "ts-node": "1.2.1",
     "tslint": "^4.3.0",
     "typescript": "~2.0.0"
   }
